# thermometer-embedded

./: .cursorrules  .gitignore  CMakeLists.txt  README.md  idf_component.yml  sdkconfig.defaults
Node_Red_Json/: thermometer_flow.json
main/: CMakeLists.txt  idf_component.yml  main.cpp  secrets.hpp.defaults
main/config/: config.hpp
main/hardware/: adc_shared.cpp  adc_shared.hpp  buzzer.cpp  buzzer.hpp  i2c_rgb_lcd.cpp  i2c_rgb_lcd.hpp  led_display.cpp  led_display.hpp  soil_moisture_sensor.cpp  soil_moisture_sensor.hpp  speaker.cpp  speaker.hpp  temperature_sensor.cpp  temperature_sensor.hpp  vibration_module.cpp  vibration_module.hpp
main/models/: alarm_event.hpp  cloud_publish_request.hpp  command.hpp  moisture_data.hpp  sensor_data.hpp  temperature_data.hpp  threshold_update.hpp
main/network/: mqtt_client.cpp  mqtt_client.hpp  wifi_manager.cpp  wifi_manager.hpp
main/state/: device_state.cpp  device_state.hpp  runtime_thresholds.cpp  runtime_thresholds.hpp
main/tasks/: alarm_control_task.cpp  alarm_control_task.hpp  cloud_communication_task.cpp  cloud_communication_task.hpp  command_task.cpp  command_task.hpp  display_control_task.cpp  display_control_task.hpp  lcd_display_task.cpp  lcd_display_task.hpp  plant_monitoring_task.cpp  plant_monitoring_task.hpp  soil_moisture_task.cpp  soil_moisture_task.hpp  temperature_sensor_task.cpp  temperature_sensor_task.hpp
main/utils/: circular_buffer.hpp  logger.cpp  logger.hpp  time_sync.cpp  time_sync.hpp  watchdog.cpp  watchdog.hpp
