idf_component_register(SRCS "main.cpp"
                               "utils/logger.cpp"
                               "network/wifi_manager.cpp"
                               "network/mqtt_client.cpp"
                               "tasks/cloud_communication_task.cpp"
                    INCLUDE_DIRS "."
                                  ".."
                                  "utils"
                                  "network"
                                  "tasks"
                                  "config"
                    REQUIRES esp_wifi esp_event nvs_flash esp_netif)
