idf_component_register(SRCS "main.cpp"
                               "utils/logger.cpp"
                               "network/wifi_manager.cpp"
                               "network/mqtt_client.cpp"
                               "tasks/cloud_communication_task.cpp"
                                "tasks/temperature_sensor_task.cpp"
                                "tasks/display_control_task.cpp"
                                "tasks/alarm_control_task.cpp"
                                "tasks/soil_moisture_task.cpp"
                               "hardware/temperature_sensor.cpp"
                               "hardware/buzzer.cpp"
                                "hardware/led_display.cpp"
                                "hardware/soil_moisture_sensor.cpp"
                    INCLUDE_DIRS "."
                                  ".."
                                  "utils"
                                  "network"
                                   "models"
                                  "hardware"
                                  "tasks"
                                  "config"
                      REQUIRES esp_wifi esp_event nvs_flash esp_netif esp_driver_gpio esp_adc)
