idf_component_register(SRCS "main.cpp"
                               "utils/logger.cpp"
                               "network/wifi_manager.cpp"
                               "network/mqtt_client.cpp"
                               "tasks/cloud_communication_task.cpp"
                                "tasks/temperature_sensor_task.cpp"
                                "tasks/alarm_control_task.cpp"
                                "tasks/soil_moisture_task.cpp"
                                "tasks/lcd_display_task.cpp"
                                 "hardware/temperature_sensor.cpp"
                                 "hardware/soil_moisture_sensor.cpp"
                                 "hardware/adc_shared.cpp"
                               "hardware/vibration_module.cpp"
                               "hardware/i2c_rgb_lcd.cpp"
                    INCLUDE_DIRS "."
                                  ".."
                                  "utils"
                                  "network"
                                   "models"
                                  "hardware"
                                  "tasks"
                                  "config"
                      REQUIRES driver esp_wifi esp_event nvs_flash esp_netif esp_driver_gpio esp_adc esp_driver_i2c)
